# llm-latent-language

./: .gitignore  README.md  ai_safety_demo.py  big_run.sh  big_run_move.sh  big_run_only_steer.sh  big_run_only_steer2.sh  config_argparse.py  diffusion.py  dq.py  dq_utils.py  find_en_words_in_vocab.py  gen_data.py  imports.py  intervention.py  joseph_miller_template.py  lang_clean.py  llama_4bitquant.py  llama_boilerplate.py  llama_experiment_template.py  llama_experiment_test.py  llama_measure_loss_story.py  llama_merge_csv.py  llama_sandbox.py  llama_spelling.py  llama_steering.py  llama_translation_steering.py  llamawrapper.py  logit_lens.py  main-repeats.py  main.py  main_rejection.py  main_rejection_experiment.py  main_rejection_test.py  main_test_quantized.py  make_synth_dataset.py  mandelbrot.py  mistral_think_in_english.py  nnsight_llama_translation.py  nnsight_logit_lens.py  (+17 more)
OLD/: OLD_gen_data.py  all_words_llama.py  gpt2_dataset.py  llama2_make_dataset.py  llama_4bitquant.py  llama_boilerplate.py  llama_generate_story.py  llama_intervention_delete_en.py  llama_measure_loss_story.py  llama_merge_csv.py  llama_spelling.py  llama_translation_steering.py  llama_utils.py  mistral.py  mistral_instruct.py  nnsight_llama_translation.py  similarity_embedding_vectors.py  temp_purge_opus.py  test_translation.py  think_in_chinese.py  think_in_english.py  think_in_english_OLD.py  utils.py
OLD_llama/: gen_data.py  llama_experiment_template.py  llama_experiment_test.py  llama_sandbox.py  make_synth_dataset.py  read_experimental_data.py
act_patch/: gen_data.py  (+1 more)
(+115 files in other folders)
