[tool.poetry]
name = "llm-latent-language"
version = "0.1.0"
description = ""
authors = ["David Quarel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentencepiece = "^0.2.0"
eindex = "^0.1.0"
torch = "^2.3.1"
tuned-lens = "^0.2.0"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
jaxtyping = "^0.2.30"
scipy = "^1.13.1"
transformers = "^4.41.2"
transformer-lens = "^2.1.0"
accelerate = "^0.31.0"
bitsandbytes = "^0.43.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
safetensors = "^0.4.3"
papermill = "^2.6.0"
ipykernel = "^6.29.4"
huggingface = "^0.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
